# anolisa

./: .gitmodules  AGENT.md  NOTICE  README.md  README_CN.md
.github/: CODEOWNERS
.github/actions/calculate-version/: action.yaml
.github/actions/package-source/: action.yaml
.github/actions/package-vendor/: action.yaml
.github/workflows/: _rpm-build.yaml  ci.yaml  docker-nightly.yaml  issue-automation.yml  pr-merged.yml  pr-opened.yml  release-preview.yaml  release.yaml  sec-core-rpmbuild.yaml  sec-core-source-code-build.yaml
docker/: Dockerfile.alinux  docker-entrypoint.sh
docs/: BUILDING.md  BUILDING_CN.md
scripts/: build-all.sh  rpm-build.sh
src/agent-sec-core/: AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  README_CN.md  agent-sec-core.spec  agent-sec-core.spec.in  tmp_lint_test.py
src/agent-sec-core/agent-sec-cli/: .gitignore  BUILD.md  Cargo.toml  README.md  RUST_INTEGRATION.md  pyproject.toml
src/agent-sec-core/agent-sec-cli/dev-tools/backend-skill/: QUICK_REFERENCE.md  SKILL.md
src/agent-sec-core/agent-sec-cli/dev-tools/backend-skill/sub-skills/: add-rust-module.md
src/agent-sec-core/agent-sec-cli/dev-tools/backend-skill/templates/: rust_backend.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/: __init__.py  cli.py  demo_coverage_gate.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/asset_verify/: __init__.py  config.conf  errors.py  verifier.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/: __init__.py  scanner.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/engine/: code_extractor.py  regex_engine.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/hook_adapter/: formatters.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/hook_adapter/cosh/: extractors.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/hook_adapter/openclaw/: extractors.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/hook_adapter/openclaw/plugin/: index.js  openclaw.plugin.json  package.json
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/rules/: rule_loader.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/rules/bash/: shell-data-exfil.yaml
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/code_scanner/rules/python/: py-unsafe-deserialization.yaml
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/observability/: __init__.py  cli.py  config.py  metrics.py  models.py  repositories.py  schema.py  sqlite_writer.py  writer.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/prompt_scanner/: PROMPT_SCANNER.md  cli.py  config.py  exceptions.py  preprocessor.py  result.py  scanner.py  scoring.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/prompt_scanner/detectors/: base.py  ml_classifier.py  rule_engine.py  semantic.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/prompt_scanner/logging/: audit.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/prompt_scanner/models/: deberta_classifier.py  model_manager.py  prompt_guard.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/prompt_scanner/rules/: __init__.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/sandbox/: classify_command.py  sandbox_policy.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/security_events/: __init__.py  config.py  orm_store.py  schema.py  summary_formatter.py  writer.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/security_middleware/: __init__.py  context.py  lifecycle.py  result.py  router.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/security_middleware/backends/: __init__.py  asset_verify.py  base.py  code_scan.py  hardening.py  intent.py  sandbox.py  skill_ledger.py  summary.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/skill_ledger/: cli.py  config.py  errors.py  utils.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/skill_ledger/core/: auditor.py  certifier.py  checker.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/skill_ledger/models/: manifest.py
src/agent-sec-core/agent-sec-cli/src/agent_sec_cli/skill_ledger/signing/: ed25519.py  key_manager.py
src/agent-sec-core/cosh-extension/: cosh-extension.json
src/agent-sec-core/cosh_hooks/: code_scanner_hook.py  prompt_scanner_hook.py
src/agent-sec-core/hermes-plugin/: README.md
src/agent-sec-core/openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json
src/agent-sec-core/scripts/: bump-version.sh
src/agent-sec-core/skill/: SKILL.md
src/agent-sec-core/tools/: SIGNING_GUIDE.md  SIGNING_GUIDE_CN.md  sign-skill.sh
src/agentsight/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_CN.md  agentsight.spec.in  build.rs
src/agentsight/docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/agentsight/scripts/: agentsight-start.sh  agentsight.service  rpm-build.sh
src/copilot-shell/: CHANGELOG.md  Makefile  copilot-shell.spec.in  esbuild.config.js  package-lock.json  package.json
src/os-skills/: CHANGELOG.md  README.md  README_CN.md  cosh-extension.json  os-skills.spec.in
src/tokenless/: Cargo.toml  LICENSE  Makefile  README.md  tokenless.spec  tokenless.spec.in
src/tokenless/crates/tokenless-cli/: Cargo.toml
src/tokenless/crates/tokenless-cli/src/: main.rs
src/tokenless/crates/tokenless-schema/: Cargo.toml
src/tokenless/crates/tokenless-schema/src/: lib.rs  response_compressor.rs  schema_compressor.rs
src/tokenless/crates/tokenless-schema/tests/: integration_test.rs
src/tokenless/crates/tokenless-schema/tests/fixtures/schemas/: hubspot_contact.json  simple_calculator.json  stripe_payment.json
src/tokenless/crates/tokenless-stats/: Cargo.toml
src/tokenless/docs/: response-compression.md  tokenless-user-manual-en.md  tokenless-user-manual-zh.md
src/tokenless/hooks/copilot-shell/: README.md  tokenless-compress-response.sh  tokenless-compress-schema.sh  tokenless-rewrite.sh
src/tokenless/openclaw/: README.md  index.ts  openclaw.plugin.json  package.json
src/tokenless/scripts/: install.sh
src/ws-ckpt/: ws-ckpt.spec.in
tests/: run-all-tests.sh
(+151 files in other folders)
