[workspace]
resolver = "2"
members = [
    "crates/tokenless-schema",
    "crates/tokenless-cli",
]
exclude = [
    "third_party/rtk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
