[workspace]
resolver = "2"
members = [
    "crates/tokenless-schema",
    "crates/tokenless-cli",
    "crates/tokenless-stats",
]
exclude = [
    "third_party/rtk",
    "third_party/toon",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
