[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "agent-sec-cli"
version = "0.3.0"
description = "Agent Security Core CLI - System hardening, sandbox isolation, and asset integrity verification for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = "==3.11.6"
authors = [
    {name = "YiZheng Yang", email = "YiZheng.Yang@linux.alibaba.com"},
    {name = "Xingdong Li", email = "XingDong.Li@linux.alibaba.com"},
]
keywords = ["security", "agent", "hardening", "sandbox", "integrity", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "gnupg>=2.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
pgpy = ["pgpy>=0.5"]

[dependency-groups]
dev = [
    "black",
    "isort",
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
agent-sec-cli = "agent_sec_cli.cli:main"

[project.urls]
Homepage = "https://github.com/alibaba/anolisa"
Documentation = "https://github.com/alibaba/anolisa/tree/main/src/agent-sec-core"
Repository = "https://github.com/alibaba/anolisa.git"
Issues = "https://github.com/alibaba/anolisa/issues"
Changelog = "https://github.com/alibaba/anolisa/blob/main/src/agent-sec-core/CHANGELOG.md"

[tool.maturin]
# Python source directory
python-source = "src"
# Include Python package data files
include = [
    "src/agent_sec_cli/asset_verify/config.conf",
    "src/agent_sec_cli/asset_verify/trusted-keys/*.asc",
]
# Native module name (must match lib.rs function name)
module-name = "agent_sec_cli._native"

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "/backend-skill/templates/"

[tool.isort]
profile = "black"
line_length = 100
extend_skip_glob = ["dev-tools/backend-skill/templates/*"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

