[package]
name = "tokenless-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for LLM schema and response compression"

[[bin]]
name = "tokenless"
path = "src/main.rs"

[dependencies]
tokenless-schema = { path = "../tokenless-schema" }
clap.workspace = true
serde_json.workspace = true
