[package]
name = "tokenless-stats"
version = "0.3.1"
edition = "2024"
description = "Statistics tracking for tokenless - SQLite-based metrics storage"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
dirs = "5.0"
